--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 server:
   port: 8080
   servlet:
-    context-path: ${spring.application.name}
+    context-path: /${spring.application.name}
 
 spaces:
   cdn-type: ${CDN_TYPE:do-s3}
