--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,15 @@
 			<artifactId>google-cloud-storage</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-identity</artifactId>
+		</dependency>
 
 		<!-- Madan KN - Deps [end]-->
 	</dependencies>
@@ -133,6 +141,13 @@
 				<version>26.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.azure</groupId>
+				<artifactId>azure-sdk-bom</artifactId>
+				<version>1.2.23</version>
+				<type>pom</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
