--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,14 @@
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-blob</artifactId>
+			<version>12.25.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-identity</artifactId>
+			<version>1.12.1</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- Madan KN - Deps [end]-->
