--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       on-profile: default
 
 zfiles:
-  cdn-type: local
+  cdn-type: s3
 
 local:
   prefix-http-url: http://localhost
@@ -32,14 +32,24 @@ gcp:
   upload-url: https://storage.googleapis.com
   config-data: ${GCP_CONFIG_DATA_KEY:''}
 
+#digital ocean-s3
+#s3:
+  #prefix-http-url: https://uxin.sgp1.digitaloceanspaces.com
+  #prefix-upload:
+  #region: sgp1
+  #bucket-id: uxin
+  #upload-url: https://sgp1.digitaloceanspaces.com
+  #key: ${DO_KEY:test}
+  #secret: ${DO_SECRET:test}
+
 s3:
-  prefix-http-url: https://uxin.sgp1.digitaloceanspaces.com
+  prefix-http-url: https://xindus.s3.ap-south-1.amazonaws.com
   prefix-upload:
-  region: sgp1
-  bucket-id: uxin
-  upload-url: https://sgp1.digitaloceanspaces.com
-  key: ${DO_KEY:test}
-  secret: ${DO_SECRET:test}
+  region: ap-south-1
+  bucket-id: xindus
+  upload-url: https://s3.ap-south-1.amazonaws.com
+  key: ${AWSS3_KEY:test}
+  secret: ${AWSS3_SECRET:test}
 
 azure:
   connection-string: ${AZURE_CONNECTION_STRING:DefaultEndpointsProtocol=https;AccountName=teststorage;AccountKey=yourkey;EndpointSuffix=core.windows.net}
